feat: Timecapsule API 구현