@@ -1,12 +1,12 @@
-package com.jnu.festival.domain.timeCapsule.service;
+package com.jnu.festival.domain.timecapsule.service;
 
-import com.jnu.festival.domain.timeCapsule.dto.TimeCapsuleRequestDto;
-import com.jnu.festival.domain.timeCapsule.dto.TimecapsuleListResponseDto;
-import com.jnu.festival.domain.timeCapsule.dto.TimecapsuleResponseDto;
-import com.jnu.festival.domain.timeCapsule.entity.TimeCapsule;
-import com.jnu.festival.domain.timeCapsule.entity.TimeCapsuleImage;
-import com.jnu.festival.domain.timeCapsule.repository.TimeCapsuleImageRepository;
-import com.jnu.festival.domain.timeCapsule.repository.TimeCapsuleRepository;
+import com.jnu.festival.domain.timecapsule.dto.request.TimecapsuleRequestDto;
+import com.jnu.festival.domain.timecapsule.dto.response.TimecapsuleDto;
+import com.jnu.festival.domain.timecapsule.dto.response.TimecapsuleListDto;
+import com.jnu.festival.domain.timecapsule.entity.Timecapsule;
+import com.jnu.festival.domain.timecapsule.entity.TimecapsuleImage;
+import com.jnu.festival.domain.timecapsule.repository.TimecapsuleImageRepository;
+import com.jnu.festival.domain.timecapsule.repository.TimecapsuleRepository;
 import com.jnu.festival.domain.user.entity.User;
 import com.jnu.festival.domain.user.repository.UserRepository;
 import com.jnu.festival.global.config.S3Service;
@@ -21,46 +21,101 @@ import org.springframework.web.multipart.MultipartFile;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
-public class TimeCapsuleService {
+public class TimecapsuleService {
     private final UserRepository userRepository;
-    private final TimeCapsuleRepository timeCapsuleRepository;
+    private final TimecapsuleRepository timecapsuleRepository;
     private final S3Service s3Service;
-    private final TimeCapsuleImageRepository timeCapsuleImageRepository;
+    private final TimecapsuleImageRepository timecapsuleImageRepository;
 
     @Transactional
-    public void createTimeCapsule(TimeCapsuleRequestDto request, List<MultipartFile> images, UserDetailsImpl userDetails) throws IOException {
+    public void createTimecapsule(TimecapsuleRequestDto request, List<MultipartFile> images, UserDetailsImpl userDetails) throws IOException {
         User user = userRepository.findByNickname(userDetails.getUsername())
                 .orElseThrow(() -> new BusinessException(ErrorCode.NOT_FOUND_USER));
 
-        TimeCapsule timeCapsule = timeCapsuleRepository.save(
-                TimeCapsule.builder()
+        Timecapsule timecapsule = timecapsuleRepository.save(
+                Timecapsule.builder()
                         .user(user)
-                        .mailAddress(request.mail_address())
+                        .mailAddress(request.mailAddress())
                         .content(request.content())
-                        .isPublic(request.is_public())
+                        .isPublic(request.isPublic())
                         .build()
         );
 
-        List<String> urlList = s3Service.uploadImages(images, "timeCapsule");
+        if (images != null) {
+            List<TimecapsuleImage> timecapsuleImages = new ArrayList<>();
 
-        // 각 URL을 사용하여 TimeCapsuleImage 생성 및 저장
-        for (String url : urlList) {
-            TimeCapsuleImage timeCapsuleImage = TimeCapsuleImage.builder()
-                    .timeCapsule(timeCapsule)
-                    .url(url)
-                    .build();
+            for (MultipartFile image : images) {
+                String url = s3Service.upload(image, "timecapsule");
+                TimecapsuleImage timecapsuleImage = TimecapsuleImage.builder()
+                        .timecapsule(timecapsule)
+                        .url(url)
+                        .build();
+                timecapsuleImages.add(timecapsuleImage);
+            }
 
-            // TimeCapsuleImage를 저장
-            timeCapsuleImageRepository.save(timeCapsuleImage);
+            timecapsuleImageRepository.saveAll(timecapsuleImages);
         }
     }
 
+    public TimecapsuleListDto getTimecapsuleList(UserDetailsImpl userDetails) {
+        List<TimecapsuleDto> myTimecapsuleDtos = new ArrayList<>();
+        List<Timecapsule> timecapsules = timecapsuleRepository.findAllByIsPublicTrue();
+
+        if (userDetails != null) {
+            User user = userRepository.findByNickname(userDetails.getUsername())
+                    .orElseThrow(() -> new BusinessException(ErrorCode.NOT_FOUND_USER));
+            List<Timecapsule> myTimecapsules = timecapsuleRepository.findAllByUser(user);
+
+            for (Timecapsule myTimecapsule : myTimecapsules) {
+                List<String> myTimecapsuleImages = timecapsuleImageRepository.findAllByTimecapsule(myTimecapsule).stream()
+                        .map(TimecapsuleImage::getUrl)
+                        .toList();
+
+                TimecapsuleDto myTimecapsuleDto = TimecapsuleDto.builder()
+                        .id(myTimecapsule.getId())
+                        .nickname(user.getNickname())
+                        .content(myTimecapsule.getContent())
+                        .images(myTimecapsuleImages)
+                        .createdAt(myTimecapsule.getCreatedAt())
+                        .build();
+
+                myTimecapsuleDtos.add(myTimecapsuleDto);
+            }
+
+            timecapsules = timecapsules.stream()
+                    .filter(timecapsule -> timecapsule.getUser() != user)
+                    .toList();
+        }
+
+        List<TimecapsuleDto> timecapsuleDtos = new ArrayList<>();
+        for (Timecapsule timecapsule : timecapsules) {
+            List<String> timecapsuleImages = timecapsuleImageRepository.findAllByTimecapsule(timecapsule).stream()
+                    .map(TimecapsuleImage::getUrl)
+                    .toList();
+
+            TimecapsuleDto timecapsuleDto = TimecapsuleDto.builder()
+                    .id(timecapsule.getId())
+                    .nickname(timecapsule.getUser().getNickname())
+                    .content(timecapsule.getContent())
+                    .images(timecapsuleImages)
+                    .createdAt(timecapsule.getCreatedAt())
+                    .build();
+
+            timecapsuleDtos.add(timecapsuleDto);
+        }
+
+        return TimecapsuleListDto.builder()
+                .myTimecapsules(myTimecapsuleDtos)
+                .timecapsules(timecapsuleDtos)
+                .build();
+    }
+
+
     @Transactional
-    public void deleteTimeCapsule(Long timecapsuleId, UserDetailsImpl userDetails) throws IOException{
+    public void deleteTimecapsule(Long timecapsuleId, UserDetailsImpl userDetails) throws IOException {
         // 지우려는 사람의 정보를 가져옴.
         User user = userRepository.findByNickname(userDetails.getUsername())
                 .orElseThrow(() -> new BusinessException(ErrorCode.NOT_FOUND_USER));
@@ -68,7 +123,7 @@ public class TimeCapsuleService {
 
         // 관련된 사진을 S3에서 삭제
         // 1. 해당 타임캡슐을 DB에서 찾음.
-        TimeCapsule timecapsule = timeCapsuleRepository.findById(timecapsuleId)
+        Timecapsule timecapsule = timecapsuleRepository.findById(timecapsuleId)
                 .orElseThrow(() -> new BusinessException(ErrorCode.NOT_FOUND_TIMECAPSULE));
 
         // 타임캡슐 생성자와 현재 사용자가 동일한지 확인
@@ -77,62 +132,18 @@ public class TimeCapsuleService {
         }
 
         // 2. 관련된 사진들을 타임캡슐로 찾는다.
-        List<TimeCapsuleImage> timecapsuleImages = timeCapsuleImageRepository.findTimeCapsuleImagesByTimeCapsule(timecapsule);
+        List<TimecapsuleImage> timecapsuleImages = timecapsuleImageRepository.findAllByTimecapsule(timecapsule);
 
         // 3. TimeCapsuleImage 엔티티들에서 URL 추출
-        List<String> urlList = timecapsuleImages.stream()
-                .map(TimeCapsuleImage::getUrl)
-                .collect(Collectors.toList());
+//        List<String> urlList = timecapsuleImages.stream()
+//                .map(TimecapsuleImage::getUrl)
+//                .toList();
+//
+//        for (String url : urlList){
+//            s3Service.delete(url);
+//        }
 
-        for (String url : urlList){
-            s3Service.delete(url);
-        }
-        timeCapsuleImageRepository.deleteAll(timecapsuleImages);
-        timeCapsuleRepository.delete(timecapsule);
+        timecapsuleImageRepository.deleteAll(timecapsuleImages);
+        timecapsuleRepository.delete(timecapsule);
     }
-
-    public List<TimecapsuleResponseDto> getMytimecapsules(UserDetailsImpl userDetails){
-        User user = userRepository.findByNickname(userDetails.getUsername())
-                .orElseThrow(() -> new BusinessException(ErrorCode.NOT_FOUND_USER));
-
-        List<TimeCapsule> myTimecapsules = timeCapsuleRepository.findByUser(user);
-
-        return myTimecapsules.stream()
-                .map(this::convertToDto)
-                .collect(Collectors.toList());
-    }
-
-    public List<TimecapsuleResponseDto> getTimecapsules(UserDetailsImpl userDetails){
-        User user = userRepository.findByNickname(userDetails.getUsername())
-                .orElseThrow(() -> new BusinessException(ErrorCode.NOT_FOUND_USER));
-        List<TimeCapsule> timecapsules = timeCapsuleRepository.findByIsPublicTrueAndIdIsNot(user);
-
-        return timecapsules.stream()
-                .map(this::convertToDto)
-                .collect(Collectors.toList());
-    }
-
-    private TimecapsuleResponseDto convertToDto(TimeCapsule timecapsule){
-        List<TimeCapsuleImage> timeCapsuleImages = timeCapsuleImageRepository.findTimeCapsuleImagesByTimeCapsule(timecapsule);
-        List<String> imageUrls = timeCapsuleImages.stream()
-                .map(TimeCapsuleImage::getUrl)
-                .collect(Collectors.toList());
-
-        return TimecapsuleResponseDto.builder()
-                .id(timecapsule.getId())
-                .nickname(timecapsule.getUser().getNickname())
-                .content(timecapsule.getContent())
-                .imageUrls(imageUrls)
-                .created_at(timecapsule.getCreatedAt().toLocalDate())
-                .build();
-    }
-
-    public TimecapsuleListResponseDto mapResponses(List<TimecapsuleResponseDto> my_timecapsules,List<TimecapsuleResponseDto> timecapsules){
-        TimecapsuleListResponseDto response = TimecapsuleListResponseDto.builder()
-                .my_timecapsules(my_timecapsules)
-                .timecapsules(timecapsules)
-                .build();
-        return response;
-    }
-
 }
